# mexc-signal-engine

./: .env.example  .gitignore  README.md  docker-compose.dev.yml  docker-compose.yml  pyproject.toml  requirements.txt  test_load_data.py
backtester/: data_loader.py  engine.py  money_management.py  report.py  run.py
migrations/: env.py
migrations/versions/: 001_create_signals_table.py
services/analyzer/: Dockerfile  cooldown_manager.py  divergence.py  filters.py  health.py  main.py  rsi_calculator.py  signal_generator.py
services/chart_builder/: Dockerfile  chart_renderer.py  health.py  main.py  minio_uploader.py
services/collector/: Dockerfile  health.py  history_loader.py  main.py  mexc_rest.py  mexc_websocket.py
services/dashboard/: Dockerfile  main.py  templates.py
services/notifier/: Dockerfile  health.py  main.py  message_formatter.py  minio_downloader.py  telegram_sender.py
services/watchdog/: Dockerfile  main.py
shared/: config.py  constants.py  minio_client.py  postgres_client.py  redis_client.py
shared/models/: candle.py  signal.py  stream_events.py
tests/: test_chart.py  test_filters.py  test_message_formatter.py  test_rsi_calculator.py
