[project]
name = "mexc-signal-engine"
version = "0.1.0"
description = "MEXC crypto signal bot with Telegram notifications"
authors = [
    {name = "MyratgeldiyevM1112"}
]
requires-python = "^3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
