[project]
name = "mexc-signal-engine"
version = "0.1.0"
description = "MEXC crypto signal bot with Telegram notifications"
authors = [
    {name = "MyratgeldiyevM1112"}
]
requires-python = ">=3.12,<3.15"
dependencies = [
    "websockets (>=16.0,<17.0)",
    "aiohttp (<3.14)",
    "redis[asyncio] (>=8.0.0,<9.0.0)",
    "asyncpg (>=0.31.0,<0.32.0)",
    "pandas (<3.0)",
    "pandas-ta (>=0.4.71b0,<0.5.0)",
    "matplotlib (>=3.10.9,<4.0.0)",
    "mplfinance (>=0.12.10b0,<0.13.0)",
    "minio (>=7.2.20,<8.0.0)",
    "aiogram (>=3.28.2,<4.0.0)",
    "pydantic (>=2.13.4,<3.0.0)",
    "pydantic-settings (>=2.14.1,<3.0.0)",
    "loguru (>=0.7.3,<0.8.0)",
    "alembic (>=1.18.4,<2.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "fastapi (>=0.137.2,<0.138.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "httpx (>=0.28.1,<0.29.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
[dependency-groups]
dev = [
    "ruff (>=0.15.16,<0.16.0)",
    "pytest (>=9.0.3,<10.0.0)",
    "pytest-asyncio (>=1.4.0,<2.0.0)"
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
